--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head> <style= "background-color: sky blue;>
-	
-	
-
-<b><Labrador Retriever></b>
-	
-<img src="images/dogimage1.png" alt: "lab playing in leaves" width= "640" height "400">
+	<head> <style>
+		body{background-color:skyblue;}
+		
+		</style>
 <meta charset="utf-8">
 <title>html1</title>
-</head>h
+</head>
 	
-<body></style>
+<body>
+<b>Labrador Retriever</b>
 	
-<html1>
+<img src="images/dogimage1.png" alt= "lab playing in leaves" width= "640" >	
 	
-<P></st><title="I'm a tooltip"</title> This is a paragraph</p>
+
+	
+<p> This is a paragraph</p>
 
 	
 	
-<img src="images/dogimage2.png" alt: "lab playing with the ball" width= "640" height "400">
+<img src="images/dogimage2.png" alt="lab playing with the ball" width="640" >
 	
 	<b><h1>Colors</h1></b>
     <b><h2>Life Span</h2></b>
 	<b><h3>Temperament</h3></b>
 
-<img src="images/dogimage3.png" alt: "black and yellow lab laying down" width= "640" height "400">
+<img src="images/dogimage3.png" alt= "black and yellow lab laying down" width= "640">
 																					  
 </body>
 </html>
