--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <b>Labrador Retriever</b>
 	
-<img src="images/dogimage1.png" alt= "lab playing in leaves" width= "640" >	
+<img src="images/dogimage1.png" alt= "lab playing in leaves" style="width: 640px;" >	
 	
 
 	
@@ -19,13 +19,13 @@
 
 	
 	
-<img src="images/dogimage2.png" alt="lab playing with the ball" width="640" >
+<img src="images/dogimage2.png" alt="lab playing with the ball" style="width: 600px;" >
 	
 	<b><h1>Colors</h1></b>
     <b><h2>Life Span</h2></b>
 	<b><h3>Temperament</h3></b>
 
-<img src="images/dogimage3.png" alt= "black and yellow lab laying down" width= "640">
+<img src="images/dogimage3.png" alt= "black and yellow lab laying down" style="width: 640px">
 																					  
 </body>
 </html>
